# SliceShuffleVST

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-release.yml
docs/: osx-install-guide.txt
src/: CMakeLists.txt
src/cli/: BpmDetector.cpp  BpmDetector.h  Main.cpp  Renderer.cpp  Renderer.h  WavLoader.cpp  WavLoader.h  WavWriter.cpp  WavWriter.h
src/dsp/: CutShuffleEngine.cpp  CutShuffleEngine.h  SliceShuffleEngine.cpp  SliceShuffleEngine.h  SlicerEngine.cpp  SlicerEngine.h
src/plugin/: ControlPanel.cpp  ControlPanel.h  CutShuffleLookAndFeel.cpp  CutShuffleLookAndFeel.h  MidiMappingOverlay.cpp  MidiMappingOverlay.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PreparedState.h  SliceShuffleLookAndFeel.cpp  SliceShuffleLookAndFeel.h  StandaloneWindow.cpp  TopBarComponent.cpp  TopBarComponent.h  UiTokens.h  WaveformOverview.cpp  WaveformOverview.h  WaveformView.cpp  WaveformView.h
